@@ -1,0 +1,54 @@
+////////////////////////////////////////////////////////////////////////////////////////////////////
+/// \file	sallyAPI\ScrollForm.h
+///
+/// \brief	Declares the scroll Windows Form. 
+///
+/// \author	Christian Knobloch
+/// \date	07.07.2010
+///
+/// This file is part of the Sally Project
+/// 
+/// Copyright(c) 2008-2011 Sally Project
+/// http://www.sally-project.org/
+///
+/// This program is free software: you can redistribute it and/or modify
+/// it under the terms of the GNU Lesser General Public License as published by
+/// the Free Software Foundation, either version 3 of the License, or
+/// (at your option) any later version.
+/// 
+/// This program is distributed in the hope that it will be useful,
+/// but WITHOUT ANY WARRANTY; without even the implied warranty of
+/// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+/// GNU Lesser General Public License for more details.
+/// 
+/// You should have received a copy of the GNU Lesser General Public License
+/// along with this program. If not, see <http://www.gnu.org/licenses/>.
+////////////////////////////////////////////////////////////////////////////////////////////////////
+
+#pragma once
+#include "Define.h"
+
+#include "Form.h"
+#include "Scrollbar.h"
+
+namespace SallyAPI
+{
+	namespace GUI
+	{
+		class DLL_API_SALLY CScrollForm :
+			public SallyAPI::GUI::CForm
+		{
+		private:
+			SallyAPI::GUI::CScrollbar*	m_pFormScrollbarVertical;
+			SallyAPI::GUI::CScrollbar*	m_pFormScrollbarHorizontal;
+			int							m_iScrollHeight;
+			int							m_iScrollWidth;
+		public:
+			CScrollForm(SallyAPI::GUI::CGUIBaseObject* parent, int x, int y, int width, int height, int controlId = 0);
+			virtual ~CScrollForm();
+
+			virtual void Resize(int width, int height);
+			virtual void ResizeScrollArea(int width, int height);
+		};
+	}
+}
