@@ -22,6 +22,8 @@ Changelog 0.7.1.1
 + rework the CFileBrowser control menu
 [SA-00448] SallyAPI: use the temp directory for the XML amazon files
 [SA-00449] SallyAPI: bring up the "is playing" only if it is not older than 10 min
+[SA-00000] SallyAPI: UI Controls
++ scroll able Form
 
 
 Changelog 0.7.0.6
